Bug 94364 - mm-modem-helpers.c line 131 testing against wrong symbol (vid) should be pid
Summary: mm-modem-helpers.c line 131 testing against wrong symbol (vid) should be pid
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: general (show other bugs)
Version: 1.4
Hardware: Other All
: medium minor
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-02 10:42 UTC by Matti Kaasinen
Modified: 2016-03-02 16:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Matti Kaasinen 2016-03-02 10:42:29 UTC
mm-modem-helpers.c line 131 testing against wrong symbol (vid) should be pid. This seems to be coming from older releases.
Comment 1 Aleksander Morgado 2016-03-02 16:19:39 UTC
Thanks, fixed in git master and mm-1-4.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.