helpers: fix check for pid when creating device identifier

https://bugs.freedesktop.org/show_bug.cgi?id=94364